name:          bonedewd
version:       0.1
stability:     provisional
synopsis:      An experimental Ultima Online server emulator 
description:   An experimental Ultima Online server emulator

license:       BSD3
license-file:  LICENSE
author:        Matthew Elder <matt@mattelder.org>
maintainer:    Matthew Elder <matt@mattelder.org>
homepage:      http://mattelder.org
category:      Games
build-type:    Simple
cabal-version: >= 1.6

library
    hs-source-dirs:  src
    c-sources:       src/compress.c

    other-modules:   BoneDewd.Compression
                     BoneDewd.Network
                     BoneDewd.RawPacket
                     BoneDewd.RxPacket
                     BoneDewd.TxPacket
                     BoneDewd.Types
                     BoneDewd.Util
    
    build-depends:   base,
                     binary,
                     binary-strict,
                     bytestring,
                     containers,
                     hexdump,
                     hslogger,
                     mtl,
                     network,
                     text

    ghc-options: -threaded -Wall -fno-ignore-asserts

executable bonedewd-server
    hs-source-dirs: src
    c-sources:       src/compress.c
    main-is:        Main.hs
    ghc-options: -threaded -Wall -fno-ignore-asserts

source-repository head
    type:     git
    location: git://github.com/sseses/bonedewd.git

